# BAR-decentralized-MapReduce-sim

./: .cproject  .dockerignore  .gitignore  .project  CMakeLists.txt  Dockerfile  README.md
Other platforms/Blockchain/: .cproject
Other platforms/Hadoop/: .cproject  .project
Other platforms/HadoopBFT/: .cproject  Dockerfile
Tools/: .dockerignore  SimGrid.Dockerfile  countContributionLoC.sh  entrypoint.sh  prepare-containers.sh  run_experiment.sh
Tools/configurations/: largescale_wordcount.conf  sum.conf  sum_no_real_byz.conf  sumlowblocktime.conf  sumlowblocktime_no_real_byz.conf  sumzeroblocktime.conf  sumzeroblocktime_no_real_byz.conf
analysis/: .RData  .Rhistory  .gitignore  CompletionTime.R  ResourcesUsage.R
analysis/data/: .tracefile.trace.swp  cleantraces.sh  completion_time.csv  completion_time.csv.bak  completion_time_old.csv  cpu_usage.csv  experiment.sh  prepare.py  prepare.sh
analysis/traces/: cat.plist  completion_time.csv  p2p_traces.csv  tracefile.trace  traces.csv
experiments/: .cproject  .project  Makefile  cat.plist  hello.conf  hello.deploy.xml  hello_remote.c  log.txt  tasks.csv  tracefile.trace
experiments/configurations/: deadlock.conf  hello.conf  largescale_wordcount.conf  p2p.conf  p2p2.conf.bak  sum.conf
experiments/deployments/: Cluster-1000.deploy.xml  large_multi_site.deploy.xml  medium_multi_cluster.deploy.xml  small_cluster.deploy.xml
experiments/src/: hello.c  hello_p2p.c  hello_remote.c  largescale_wordcount.c
experiments/traces/: tracefile.trace
platform/: .cproject  Makefile
platform/include/: DLT.h  common.h  (+5 more)
(+93 files in other folders)
